# JSTYPELOG

./: README.md  REPRODUCTION.md  SETUP.md  pyproject.toml
dts_generation/: __init__.py  comparison.py  declaration.py  evaluation.py  examplification.py  generation.py
dts_generation/utils/: __init__.py  build.py  shell.py
jstypelog/: __init__.py  __main__.py  comparison.py  declaration.py  evaluation.py  examplification.py  generation.py
jstypelog/utils/: __init__.py  build.py  helpers.py  printer.py  shared.py  shell.py
